objects/Case.object
<CustomObject>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Artemus.Request.requestor_id
varchar(100)</description>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RestrictionType__c</fullName>
        <description>No longer used and removed from case layout page</description>
        <label>Restriction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Buy</fullName>
                </value>
                <value>
                    <fullName>Do Not Hold</fullName>
                </value>
                <value>
                    <fullName>Do Not Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RunCaseAssignmentRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the case assignment rules will run upon save.</description>
        <label>Run Case Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RunCaseSharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, runs apex case sharing upon save.  Used primarily for realignments.  This should be default of checked.  Apex handles the sharing of cases based on record type, user, etc.and will not share cases that shouldn't be shared.</description>
        <label>Run Case Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RushRequestReason__c</fullName>
        <description>If the Due Date is less than 21 days in the future, Rush Request Reason is required.</description>
        <inlineHelpText>If this is Rush Request, please Indicate Why?</inlineHelpText>
        <label>Rush Request Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RushRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this is a rush request</description>
        <inlineHelpText>True if this is a rush request</inlineHelpText>
        <label>Rush Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalespersonattendedCPEMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated in Artemus and integrated to display in Salesforce.</description>
        <label>Salesperson attended CPE Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedByFor__c</fullName>
        <formula>IF( ISBLANK(SubmittedOnBehalfOf__c)  ,   Requestor__r.FirstName  &amp; " "  &amp;  Requestor__r.LastName ,   SubmittedOnBehalfOf__r.FirstName  &amp; " "  &amp;  SubmittedOnBehalfOf__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By/For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedOnBehalfOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to support the Affiliate Request Process</description>
        <label>Submitted on behalf of</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ActivityReporting__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.ActivityZoneId__c</field>
                <operation>notEqual</operation>
                <value>a1bF0000003XUiW,a1bF00000053bto</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SubmitedOnBehalfOf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingLevel__c</fullName>
        <description>For Private Wealth Case, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Tax Harvesting Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security level</fullName>
                </value>
                <value>
                    <fullName>Lot level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxHarvestingThresholdAmount__c</fullName>
        <description>Threshold for Tax Harvesting. For Private Wealth Case, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Tax Harvesting Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingThresholdPercent__c</fullName>
        <description>For Private Wealth Case, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Tax Harvesting Threshold Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingType__c</fullName>
        <description>Threshold for Tax Harvesting. For Private Wealth Case, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Tax Harvesting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Harvest losses over</fullName>
                </value>
                <value>
                    <fullName>Harvest losses up to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerminationType__c</fullName>
        <description>For Private Wealth Case, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Termination Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keep Account Holdings</fullName>
                </value>
                <value>
                    <fullName>Liquidate Holdings (Full or Partial)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Artemus.Request.territory
varchar(255)</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TickersRestrictionCategoriesSectors__c</fullName>
        <description>For Private Wealth Case. The field contains a list of all of the restrictions and related actions for both Restriction Update and Account Opening requests.</description>
        <label>Tickers, Restriction Categories, Sectors</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_AUM_Affiliate__c</fullName>
        <description>A field to support the Affiliate Request process.</description>
        <inlineHelpText>Total AUM for the Firm, not the Natixis AUM</inlineHelpText>
        <label>Total AUM with Affiliate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_AUM_with_Natixis__c</fullName>
        <description>Used in the Affiliate Request Process</description>
        <label>Total AUM with Natixis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meaningless field that can be used to kick-off update triggers.</description>
        <inlineHelpText>Meaningless field that can be used to kick-off update triggers.</inlineHelpText>
        <label>Touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Structure__c</fullName>
        <description>Field to support the Affiliate Request Process</description>
        <label>Vehicle Structure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIT</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>Institutional Strategy</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>SMA Wrap</fullName>
                </value>
                <value>
                    <fullName>Subadvised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>SMA (Institutional)</fullName>
                </value>
                <value>
                    <fullName>SMA (Wrap)</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WithdrawalAmount__c</fullName>
        <description>For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WithdrawalDate__c</fullName>
        <description>One time withdrawal, for Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <inlineHelpText>One Time Withdrawal Date</inlineHelpText>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalEndDate__c</fullName>
        <description>Systematic Withdrawal End Date. For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <inlineHelpText>Systematic Withdrawal End Date</inlineHelpText>
        <label>Withdrawal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalFrequency__c</fullName>
        <description>Withdrawal frequency. For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Withdrawal Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>BiWeekly</fullName>
                    <label>Bi-weekly (every two weeks)</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WithdrawalNumber__c</fullName>
        <description>For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Number of Withdrawals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WithdrawalStartDate__c</fullName>
        <description>Systematic Withdrawal Start. For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <inlineHelpText>Systematic Withdrawal Start</inlineHelpText>
        <label>Withdrawal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalType__c</fullName>
        <description>For Private Wealth Case. Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Withdrawal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Systematic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Started_Date_Time__c</fullName>
        <description>For IPM Cases, this represents the datetime that work started (that is, when the case went into any status in the case support process below Assigned).  Maintained by a process builder.</description>
        <label>Work Started Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkedToClosedAge__c</fullName>
        <description>The difference in days between when a case was closed and when work began for a given case.  Based on fields maintained for IPM Cases.</description>
        <formula>IF(NOT(ISBLANK( ClosedDate )) &amp;&amp; NOT(ISBLANK( Work_Started_Date_Time__c )),
   DATEVALUE(ClosedDate) - DATEVALUE(Work_Started_Date_Time__c),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked To Closed Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Private</sharingModel><enableHistory>true</enableHistory>
    <listViews>
        <fullName>AdvisorPortalSupport_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>Advisor Portal Support</label>
        <queue>AdvisorPortalSupport</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_Request_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Affiliate Request</label>
        <queue>Affiliate_Request</queue>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_RequestsScheduled</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>RequestedSpeakers__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>LastEventEndDatetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Affiliate_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Affiliate Requests Scheduled</label>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_Requests_All_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>RequestedDates__c</columns>
        <columns>RequestedSpeakers__c</columns>
        <columns>Requestor__c</columns>
        <columns>SubmittedOnBehalfOf__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Affiliate_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Affiliate Requests - All Closed</label>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
            <group>Sales_Distribution_Strategies</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_Requests_My_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RequestedDates__c</columns>
        <columns>RequestedSpeakers__c</columns>
        <columns>Requestor__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Affiliate_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RequesterLoggedIn__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <label>Affiliate Requests - My Closed</label>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_Requests_My_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RequestedDates__c</columns>
        <columns>RequestedSpeakers__c</columns>
        <columns>Requestor__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Affiliate_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Affiliate Requests - My Open</label>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Affiliate_Requests_TESTAll_Closed</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>RequestedDates__c</columns>
        <columns>RequestedSpeakers__c</columns>
        <columns>Requestor__c</columns>
        <columns>SubmittedOnBehalfOf__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Affiliate_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Affiliate Requests - All Closed TEST</label>
        <sharedTo>
            <group>Business_Operations</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClosedPRCGCases</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>RequestDate__c</columns>
        <columns>RequestArtemusID__c</columns>
        <columns>RequestType__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Analyst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Closed,Cancelled</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.PRCG_Request</value>
        </filters>
        <label>All Closed PRCG Cases</label>
        <sharedTo>
            <group>PRCG</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllDataOpsCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>AttachmentNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DataOperations</value>
        </filters>
        <label>All Data Ops Cases</label>
    </listViews>
    <listViews>
        <fullName>AllDataOpsCasesOpen</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DataOperations</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Data Ops Cases - Open</label>
    </listViews>
    <listViews>
        <fullName>AllOpenPRCGCases</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Analyst__c</columns>
        <columns>RequestDate__c</columns>
        <columns>RequestArtemusID__c</columns>
        <columns>RequestType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Closed,Cancelled</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.PRCG_Request</value>
        </filters>
        <label>All Open PRCG Cases</label>
        <sharedTo>
            <group>PRCG</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_IPM_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requestor__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>DueSoon__c</columns>
        <columns>DaysUntilDue__c</columns>
        <columns>DueDate__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsIPMCase__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*All Open IPM Cases</label>
        <sharedTo>
            <group>Product_Mgmt_Operations</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PRCG</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.PRCG_Request</value>
        </filters>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>CPE Cases Modified TODAY</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CampaignEmailRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Requestor__c</columns>
        <columns>AffiliateFirmName__c</columns>
        <columns>Audience__c</columns>
        <columns>AudienceExclusion__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CampaignEmailRequest</value>
        </filters>
        <label>Campaign Email Request</label>
        <sharedTo>
            <group>CampaignRequestsOwner</group>
            <group>SFDC_Admins</group>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CampaignEmailRequestClosed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Requestor__c</columns>
        <columns>AffiliateFirmName__c</columns>
        <columns>Audience__c</columns>
        <columns>AudienceExclusion__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CampaignEmailRequest</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Campaign Email Request - Closed</label>
        <sharedTo>
            <group>CampaignRequestsOwner</group>
            <group>SFDC_Admins</group>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account_Investment_Change</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request an account investment change</description>
        <label>Account Investment Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Opening</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request an account opening</description>
        <label>Account Opening</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ad_Hoc_Request</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal ad hoc requests</description>
        <label>Ad Hoc Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Advisor_Portal</fullName>
        <active>true</active>
        <businessProcess>Advisor Portal</businessProcess>
        <description>PRCG web portal support process</description>
        <label>Advisor Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Affiliate_Request</fullName>
        <active>true</active>
        <businessProcess>Affiliate Request</businessProcess>
        <description>Use this type for Affiliate Requests</description>
        <label>Affiliate Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bulk_Investment_Strategy_Swap</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request a bulk investment strategy swap</description>
        <label>Bulk Investment Strategy Swap</label>
    </recordTypes>
    <recordTypes>
        <fullName>CampaignEmailRequest</fullName>
        <active>true</active>
        <businessProcess>Campaign Email Request</businessProcess>
        <description>For Business Campaign Email Request Process</description>
        <label>Campaign Email Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>DDQ</fullName>
        <active>true</active>
        <businessProcess>IPM No Legal Review</businessProcess>
        <description>Use for Due Diligence Questionnaire (DDQ) requests for IPM</description>
        <label>DDQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>DataOperations</fullName>
        <active>true</active>
        <businessProcess>Data Operations</businessProcess>
        <description>Used for Data Operation Processes</description>
        <label>Data Operations</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPMExternalRequest</fullName>
        <active>true</active>
        <businessProcess>IPM Standard</businessProcess>
        <description>Used for Ad hoc IPM requests for external clients</description>
        <label>IPM External Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPMInternalRequest</fullName>
        <active>true</active>
        <businessProcess>IPM Standard</businessProcess>
        <description>Used for IPM requests that do not involve external clients (i.e., data files in support of marketing materials)</description>
        <label>IPM Internal Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <businessProcess>PRCG Request</businessProcess>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Model_Update_Request</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request a model update</description>
        <label>Model Update Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Model_Request</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request a new model</description>
        <label>New Model Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Requestor</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases for new requestor setup</description>
        <label>New Requestor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRCG_Request</fullName>
        <active>true</active>
        <businessProcess>PRCG Request</businessProcess>
        <label>PRCG Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrivateWealthPortal</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <label>Private Wealth Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFI</fullName>
        <active>true</active>
        <businessProcess>IPM Standard</businessProcess>
        <description>Used for Request for Information (RFI) requests for IPM</description>
        <label>RFI</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <businessProcess>IPM Standard</businessProcess>
        <description>Used for Request for Proposal (RFP) requests for IPM</description>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restriction_Update</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request a restriction update</description>
        <label>Restriction Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Harvest</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request tax harvesting</description>
        <label>Tax Harvest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Termination</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases that request an account termination</description>
        <label>Termination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Update_to_Requestor</fullName>
        <active>true</active>
        <businessProcess>Private Wealth Portal</businessProcess>
        <description>Private Wealth Portal cases for requestor updates</description>
        <label>Update to Requestor</label>
    </recordTypes>
</CustomObject>